# Saas_Insurance

./: .gitignore  README.md  pyproject.toml
figures/: fig_aggregate_cost_distribution.py  fig_reserve_by_portfolio_size.py
src/saas_actuaria/: __init__.py  calibration.py  metrics.py  models.py
studies/: study_censoring_bias.py  study_mixed_population.py  study_policy_alternatives.py  study_vercel.py
tables/: tab_reserve_comparison.py
