[project]
name = "saas-actuaria-sims"
version = "0.1.0"
description = "Monte Carlo simulations for actuarial modeling of capped-usage AI subscriptions"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_actuaria"]

[tool.ruff]
line-length = 100
target-version = "py311"
